--- a/src/app/captions/captions.component.html
+++ b/src/app/captions/captions.component.html
@@ -1,10 +1,10 @@
 <div style="padding: 10px;">
     <div style="display: flex;justify-content: center;">
-        <h1 style="text-align: center;font-size: 30px;width: fit-content;background-color: white">World of Captions</h1>
+        <h1 style="text-align: center;font-size: 30px;width: fit-content;background-color: white">Captions Planet</h1>
 
     </div>
     <h2 style="background-color: white">
-        Welcome to <span style="font-weight: 600;">World of Captions</span>, your ultimate source for creative and captivating captions for your Instagram posts. Are you tired of spending hours trying to come up with the perfect caption? Look no further! Our curated collection of captions is designed to make your posts stand out and engage your audience. From inspiring quotes to funny one-liners, we have captions for every occasion.
+        Welcome to <span style="font-weight: 600;">Captions Planet</span>, your ultimate source for creative and captivating captions for your Instagram posts. Are you tired of spending hours trying to come up with the perfect caption? Look no further! Our curated collection of captions is designed to make your posts stand out and engage your audience. From inspiring quotes to funny one-liners, we have captions for every occasion.
     </h2>
 
     <h2 style="background-color: white">
