--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@ body {
     background-repeat: repeat;
     // display: none;
 }
-@import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
+// @import url("https://fonts.googleapis.com/css?family=Montserrat:500,700");
 
 ::-webkit-scrollbar {
     display: none;
