--- a/src/app/captions/captions.component.html
+++ b/src/app/captions/captions.component.html
@@ -1,6 +1,6 @@
 <div style="padding: 10px;">
     <div style="display: flex;justify-content: center;">
-        <h1 style="text-align: center;font-size: 30px;width: fit-content;background-color: white">Captions Planet 1</h1>
+        <h1 style="text-align: center;font-size: 30px;width: fit-content;background-color: white">Captions Planet</h1>
 
     </div>
     <h2 style="background-color: white">
